Fix form alignment.

--- a/src/containers/Cart/CSS/select.module.css
+++ b/src/containers/Cart/CSS/select.module.css
@@ -1,7 +1,7 @@
 .form {
 	width: 95%;
 	max-width: 450px;
-	margin: initial auto;
+	margin: 0 auto;
 	padding: 0;
 }
 
